// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createSample action Throws if the api fails 1`] = `
Array [
  Object {
    "message": "Saving sample...",
  },
  Object {
    "error": "We couldn't create your sample. Please try uploading it again",
  },
]
`;

exports[`createSample action Works correctly with many files being uploaded 1`] = `
Object {
  "name": "test sample",
  "sampleTechnology": "10x",
}
`;

exports[`createSample action Works correctly with many files being uploaded 2`] = `
Array [
  Object {
    "message": "Saving sample...",
  },
  Object {
    "experimentId": "exp234",
    "sample": Object {
      "complete": false,
      "createdDate": "2020-01-01T00:00:00.000Z",
      "error": false,
      "experimentId": "exp234",
      "fileNames": Array [],
      "files": Object {
        "barcodes.tsv.gz": Object {
          "upload": Object {
            "status": "uploading",
          },
        },
        "features.tsv.gz": Object {
          "upload": Object {
            "status": "uploading",
          },
        },
        "matrix.tsv.gz": Object {
          "upload": Object {
            "status": "uploading",
          },
        },
      },
      "lastModified": "2020-01-01T00:00:00.000Z",
      "metadata": Object {},
      "name": "test sample",
      "type": "10X Chromium",
      "uuid": "abc123",
    },
  },
  undefined,
]
`;

exports[`createSample action Works correctly with one file being uploaded 1`] = `
Object {
  "name": "test sample",
  "sampleTechnology": "10x",
}
`;

exports[`createSample action Works correctly with one file being uploaded 2`] = `
Array [
  Object {
    "message": "Saving sample...",
  },
  Object {
    "experimentId": "exp234",
    "sample": Object {
      "complete": false,
      "createdDate": "2020-01-01T00:00:00.000Z",
      "error": false,
      "experimentId": "exp234",
      "fileNames": Array [],
      "files": Object {
        "matrix.tsv.gz": Object {
          "upload": Object {
            "status": "uploading",
          },
        },
      },
      "lastModified": "2020-01-01T00:00:00.000Z",
      "metadata": Object {},
      "name": "test sample",
      "type": "10X Chromium",
      "uuid": "abc123",
    },
  },
  undefined,
]
`;
